--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Downloads.loader.js";
+      var loaderUrl = buildUrl + "/prod.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Downloads.data.br",
-        frameworkUrl: buildUrl + "/Downloads.framework.js.br",
-        codeUrl: buildUrl + "/Downloads.wasm.br",
+        dataUrl: buildUrl + "/prod.data.br",
+        frameworkUrl: buildUrl + "/prod.framework.js.br",
+        codeUrl: buildUrl + "/prod.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "snake_game",
