--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | snake_game</title>
+    <title>Unity WebGL Player | catch_game</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">snake_game</div>
+        <div id="unity-build-title">catch_game</div>
       </div>
     </div>
     <script>
@@ -58,12 +58,12 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/prod.loader.js";
       var config = {
-        dataUrl: buildUrl + "/prod.data.br",
-        frameworkUrl: buildUrl + "/prod.framework.js.br",
-        codeUrl: buildUrl + "/prod.wasm.br",
+        dataUrl: buildUrl + "/prod.data",
+        frameworkUrl: buildUrl + "/prod.framework.js",
+        codeUrl: buildUrl + "/prod.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "snake_game",
+        productName: "catch_game",
         productVersion: "1.0",
         showBanner: unityShowBanner,
       };
